--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  
         <div class="main-container">
     
-         <h4>📡 I’m Moritz, crafting websites that stand out — fresh aesthetics and unique concepts. From 🧵 fashion to 🎶 music and 🎨 art, I craft authentic online presences that truly represent you. Ready to rethink your online presence? 
+         <h4>📡 I’m Moritz, crafting websites that stand out — fresh aesthetics and unique concepts. From 🧵 fashion to 🎶 music and 🎨 art, I build authentic webpages that truly represent you. Ready to rethink your online presence? 
 Let’s make it bold.</h4>
          <div class="combined-container" id="logo-generator">
              <div class="content">
