--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
  
         <div class="main-container">
     
-         <h4>📡 I’m Moritz, crafting websites that stand out — fresh aesthetics and unique concepts. From 🧵 fashion to 🎶 music and 🎨 art, I build authentic webpages that truly represent you. Ready to rethink your online presence? 
-Let’s make it bold.</h4>
+         <h4>👁️‍🗨️I’m Moritz, i design websites💻 that stand out — user friendly, unique and fully responsive📲. I worked with clients from the fashion 👜, music🎙️ industry and artists from various fields 📸. I build authentic webpages📑 that truly represent you. Ready to rethink your online presence🤳? 
+Let’s make it <h3>bold</h3>.</h4>
+
          <div class="combined-container" id="logo-generator">
              <div class="content">
                  <div class="scroll-box">
