--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
  
         <div class="main-container">
     
-       <h4>👁️‍🗨️I’m Moritz, i design websites💻 that stand out — user friendly, unique and fully responsive📲. I worked with clients from the fashion 👜, music🎙️ industry and artists from various fields 📸. I build authentic webpages📑 that truly represent you. Ready to rethink your online presence🤳? 
-Let’s make it <span class="bold-h3">bold</span>.</h4>
+<button onclick="toggleLanguage()">Deutsch</button>
+<h4 id="text-content">
+    👁️‍🗨️I’m Moritz, I design websites💻 that stand out — user-friendly, unique, and fully responsive📲. 
+    I worked with clients from the fashion 👜, music🎙️ industry, and artists from various fields 📸. 
+    I build authentic pages📑 that truly represent you. Ready to rethink your online presence🤳? 
+    Let’s make it <span class="bold-h3">bold</span>.
+</h4>
 
          <div class="combined-container" id="logo-generator">
              <div class="content">
