--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     I build authentic pages📑 that truly represent you. Ready to rethink your online presence🤳? 
     Let’s make it <span class="bold-h3">bold</span>.
 </h4>
-<button onclick="toggleLanguage()" class="language-buttons">Deutsch</button>
+
+<button id="translation-button" class="language-buttons">Deutsch</button>
 
          <div class="combined-container" id="logo-generator">
              <div class="content">
