--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
  
         <div class="main-container">
 
-<!--<h4 id="text-content">
-    👁️‍🗨️I’m Moritz, I design websites💻 that stand out — user-friendly, unique, and fully responsive📲. 
-    I worked with clients from the fashion 👜, music🎙️ industry, and artists from various fields 📸. 
-    I build authentic pages📑 that truly represent you. Ready to rethink your online presence🤳? 
-    Let’s make it <span class="bold-h3">bold</span>.
+<h4 id="text-content">
+    Remember When Web Was Swag? I create authentic webpages that truly represent you. 
+    I have worked with artists from various creative fields and businesses from all over Europe. 
+    With my experience in coding and web development there's nothing we can't make Happen in the Web. Having worked with website builders like webflow, framer, wix, wordpress, ... i could help you make a website there, too? 
+    Ready to rethink your online presence? Let’s make it <span class="bold-h3">bold</span>!
 </h4>
 
-<button id="translation-button" class="language-buttons">Deutsch</button>-->
+<button id="translation-button" class="language-buttons">Deutsch</button>
 
          <div class="combined-container" id="logo-generator">
              <div class="content">
