--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="main-container">
 
 <h4 id="text-content">
-    Remember When Web Was Swag? I create authentic webpages that truly represent you. 
+     <span class="bold-h5">Remember When Web Was Swag?</span>I create authentic webpages that truly represent you. 
     I have worked with artists from various creative fields and businesses from all over Europe. 
-    With my experience in coding and web development there's nothing we can't make Happen in the Web. Having worked with website builders like webflow, framer, wix, wordpress, ... i could help you make a website there, too? 
+    With my experience in coding and web development there's nothing we can't make Happen in the Web. Having worked with website builders like webflow, framer, wix, wordpress,... i could help you make a website there, too.
     Ready to rethink your online presence? Let’s make it <span class="bold-h3">bold</span>!
 </h4>
 
