--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="header-container">
         <div class="logo">
-            <a href="/" class="logo-link">Moritz Gauss</a>
+            <a href="/" class="logo-link">Mritz Gauss</a>
             <a href="/about" class="about-link">(About)</a>
         </div>
         
