--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <h4 id="text-content">
      <span class="bold-h5">Remember When Web Was Swag?</span>I create authentic webpages that truly represent you. 
     I have worked with artists from various creative fields and businesses from all over Europe. 
-    With my experience in coding and web development there's nothing we can't make Happen in the Web. Having worked with website builders like webflow, framer, wix, wordpress,... i could help you make a website there, too.
-    Ready to rethink your online presence? Let’s make it <span class="bold-h3">bold</span>!
+    With my experience in coding and web development there's nothing we can't make happen on your page or application. I also know webflow, framer, wix, wordpress,...
+    <br>Ready to rethink your online presence? Let’s make it <span class="bold-h3">bold</span>!
 </h4>
 
          <div class="combined-container" id="logo-generator">
