--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
              <div class="content">
                  <div class="scroll-box">
                      <div class="info">
-                         <h2>Online Performance Work in Progress (2025)</h2>
+                         <h2>Work in Progress (2025)</h2>
                          <p>Food Art & Design Course at HfG Offenbach together with <a href="https://www.instagram.com/tamarapesi/" target="_blank">Tamara Pešić</a> from a pinch of salt studio.</p>
                      </div>
                      <div class="iframe-container">
@@ -513,6 +513,7 @@
                      <span class="arrow arrow_left">←</span>
                      <span class="arrow arrow_right">→</span>
              </div>
+            </div>
              <div class="discr-container">
                  <p>An archive like THE BEACH is so important to me because it captures how style and ideas evolve over time. It’s a space to reflect on creative growth, highlight key moments, and updates dynamically throught Api.
                  </p>
