--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                      <div class="info">
                          <h2>Work in Progress (2025)</h2>
                          <p>Food Art & Design Course at HfG Offenbach together with <a href="https://www.instagram.com/tamarapesi/" target="_blank">Tamara Pešić</a> from a pinch of salt studio.</p>
+                                                 <a href="https://beach.mori77z.de/frkchain" target="_blank">beach.mori77z.de/frkchain</a>
                      </div>
                      <div class="iframe-container">
                          <iframe src="https://beach.mori77z.de/frkchain"></iframe>
