--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Trocchi&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=web_traffic" />
 </head>
 <body>
 
     <div class="header-container">
         <div class="logo">
-            <a href="/" class="logo-link">Mritz Gauss</a>
-            <a href="/about" class="about-link">(About)</a>
+            <a href="/">Mritz Gauss</a>
+            <a href="/studio/">(Studio)</a>
+            <a href="/about">(About)</a>
         </div>
         
         <nav>
@@ -108,38 +108,30 @@
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo1-copyright-moritzgauss.jpeg" alt="Pattern 1">
-                                  <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                      </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo2-copyright-moritzgauss.png" alt="Pattern 2">
-                                  <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
-
                      </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo3-copyright-moritzgauss.png" alt="Pattern 3">
-                                  <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
-
                      </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo4-copyright-moritzgauss.png" alt="Pattern 4">
-                                  <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
-
                      </div>
                  </div>
                       <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo5-copyright-moritzgauss.png" alt="Pattern 5">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                      </div>
                  </div>
              </div>
@@ -172,28 +164,24 @@
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern1-copyright-moritzgauss.jpeg" alt="Pattern 1">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                     </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern2-copyright-moritzgauss.png" alt="Pattern 2">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                     </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern3-copyright-moritzgauss.jpeg" alt="Pattern 3">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                     </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern4-copyright-moritzgauss.png" alt="Pattern 4">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                     </div>
                  </div>
              </div>
@@ -290,14 +278,12 @@
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://i.pinimg.com/736x/24/de/c7/24dec769e71dcc7134c1058c9d978844.jpg" alt="Pattern 1">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                     </div>
                   </div>
                   <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://i.pinimg.com/736x/e8/d8/41/e8d841e68a0befd7801d354f3818c02c.jpg" alt="Pattern 2">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                     </div>
                   </div>
              <div class="scroll-box">
@@ -330,21 +316,18 @@
                    <p>Fully Code. Updated Dynamically with CMS.</p></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb1-copyright-moritzgauss.png" alt="My Web 1">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                         </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb2-copyright-moritzgauss.png" alt="My Web 2">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                         </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb3-copyright-moritzgauss.gif" alt="My Web 3">
-                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                         </div>
                  </div>
              </div>
@@ -398,7 +381,6 @@
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/ilove2007-copyright-moritzgauss.png" alt="ilove 1">
-                                         <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                         </div>
              </div>
            </div>
@@ -436,21 +418,18 @@
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s1-copyright-moritzgauss.png" alt="R2S 1">
-                                             <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                         </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s2-copyright-moritzgauss.jpg" alt="R2S 2">
-                                             <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                         </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s3-copyright-moritzgauss.MOV" alt="R2S 3">
-                                             <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
 
                         </div>
                  </div>
@@ -483,7 +462,6 @@
                      <div class="info"></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/linktree1-copyright-moritzgauss.jpg.PNG" alt="ilove 1">
-                                        <!--<span class="material-symbols-outlined icon">web_traffic</span>-->
                         </div>
              </div>
            </div>
