--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <div class="header-container">
         <div class="logo">
-         <a class="moritz" href="/about">Mritz Gauss</a>
-            <a href="/studio/">(Studio)</a>
+        <a class="moritz" href="/about" title="ABOUT ME">Mritz Gauss</a>
+        <a href="/studio/">(Studio)</a>
         </div>
         
         <nav>
@@ -162,25 +162,25 @@
                    <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern1-copyright-moritzgauss.jpeg" alt="Pattern 1">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern1-copyright-moritzgauss.jpeg" title="CLICK TO ZOOM" alt="Pattern 1">
                     </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern2-copyright-moritzgauss.png" alt="Pattern 2">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern2-copyright-moritzgauss.png" title="CLICK TO ZOOM" alt="Pattern 2">
                     </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern3-copyright-moritzgauss.jpeg" alt="Pattern 3">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern3-copyright-moritzgauss.jpeg" title="CLICK TO ZOOM" alt="Pattern 3">
                     </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern4-copyright-moritzgauss.png" alt="Pattern 4">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/pattern4-copyright-moritzgauss.png" title="CLICK TO ZOOM" alt="Pattern 4">
                     </div>
                  </div>
              </div>
@@ -276,25 +276,25 @@
                    <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://i.pinimg.com/736x/24/de/c7/24dec769e71dcc7134c1058c9d978844.jpg" alt="Pattern 1">
+                         <img src="https://i.pinimg.com/736x/24/de/c7/24dec769e71dcc7134c1058c9d978844.jpg" title="CLICK TO ZOOM" alt="Pattern 1">
                     </div>
                   </div>
                   <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://i.pinimg.com/736x/e8/d8/41/e8d841e68a0befd7801d354f3818c02c.jpg" alt="Pattern 2">
+                         <img src="https://i.pinimg.com/736x/e8/d8/41/e8d841e68a0befd7801d354f3818c02c.jpg" title="CLICK TO ZOOM" alt="Pattern 2">
                     </div>
                   </div>
              <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://i.pinimg.com/736x/63/1a/a0/631aa0fb2df02ef5297fc5ebfdb52b9c.jpg" alt="Pattern 3">
+                         <img src="https://i.pinimg.com/736x/63/1a/a0/631aa0fb2df02ef5297fc5ebfdb52b9c.jpg" title="CLICK TO ZOOM" alt="Pattern 3">
                     </div>
                  </div>
              <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://i.pinimg.com/736x/0f/da/ae/0fdaaeaff634c921562d85fd2aabdaed.jpg" alt="Pattern 4">
+                         <img src="https://i.pinimg.com/736x/0f/da/ae/0fdaaeaff634c921562d85fd2aabdaed.jpg" title="CLICK TO ZOOM" alt="Pattern 4">
                     </div>
                  </div>
              </div>
@@ -314,19 +314,19 @@
                          <h2>My (this) Website (2024)</h2>
                    <p>Fully Code. Updated Dynamically with CMS.</p></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb1-copyright-moritzgauss.png" alt="My Web 1">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb1-copyright-moritzgauss.png" title="CLICK TO ZOOM" alt="My Web 1">
                         </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb2-copyright-moritzgauss.png" alt="My Web 2">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb2-copyright-moritzgauss.png" title="CLICK TO ZOOM" alt="My Web 2">
                         </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb3-copyright-moritzgauss.gif" alt="My Web 3">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb3-copyright-moritzgauss.gif" title="CLICK TO ZOOM" alt="My Web 3">
                         </div>
                  </div>
              </div>
@@ -416,19 +416,19 @@
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s1-copyright-moritzgauss.png" alt="R2S 1">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s1-copyright-moritzgauss.png" title="CLICK TO ZOOM" alt="R2S 1">
                         </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s2-copyright-moritzgauss.jpg" alt="R2S 2">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s2-copyright-moritzgauss.jpg" title="CLICK TO ZOOM" alt="R2S 2">
                         </div>
                  </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s3-copyright-moritzgauss.MOV" alt="R2S 3">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s3-copyright-moritzgauss.MOV" title="CLICK TO ZOOM" alt="R2S 3">
 
                         </div>
                  </div>
@@ -460,7 +460,7 @@
                    <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/linktree1-copyright-moritzgauss.jpg.PNG" alt="ilove 1">
+                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/linktree1-copyright-moritzgauss.jpg.PNG" title="CLICK TO ZOOM" alt="ilove 1">
                         </div>
              </div>
            </div>
