index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                  <div class="scroll-box">
                      <div class="info">
                          <h2>Music Label Landing Page (2024)</h2>
-                         <a href="https://r2shine.de/wavegang/" target="_blank">r2shine.de/wavegang</a>
+                         <a href="https://r2shine.de/wavegang/" target="_blank">r2s.education/wavegang</a>
                      </div>
                      <div class="iframe-container">
                          <iframe src="https://r2shine.de/wavegang/"></iframe>
@@ -401,16 +401,16 @@
                  <div class="scroll-box">
                      <div class="info">
                          <h2>Rise 2 Shine Webpage (2024)</h2>
-                         <a href="https://fc4022.github.io" target="_blank">www.r2shine.de</a>
+                         <a href="https://r2s.education" target="_blank">www.r2s.education</a>
                      </div>
                      <div class="iframe-container">
-                         <iframe src="https://fc4022.github.io" title="website"></iframe>
+                         <iframe src="https://r2s.education" title="website"></iframe>
                      </div>
                  </div>
                       <div class="scroll-box">
                          <div class="info"></div>
                                  <div class="iframe-container">
-                         <iframe src="https://fc4022.github.io/archive" title="website"></iframe>
+                         <iframe src="https://r2s.education/archive" title="archive"></iframe>
                      </div>
                     </div>
                  <div class="scroll-box">
