--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
                  <div class="scroll-box">
                      <div class="info">
                          <h2>Music Label Landing Page (2024)</h2>
-                         <a href="https://r2shine.de/wavegang/" target="_blank">r2s.education/wavegang</a>
+                         <a href="https://r2s.education/wavegang/" target="_blank">r2s.education/wavegang</a>
                      </div>
                      <div class="iframe-container">
-                         <iframe src="https://r2shine.de/wavegang/"></iframe>
+                         <iframe src="https://r2s.education/wavegang/"></iframe>
                      </div>
              </div>
            </div>
