index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                  <div class="scroll-box">
                      <div class="info">
                          <h2>Digital Archive THE BEACH (2024)</h2>
-                         <a href="https://beach.mori77z.de/archive" target="_blank">beach.mori77z.de/archive</a>
+                         <a href="https://beach.mori77z.de" target="_blank">beach.mori77z.de</a>
                      </div>
                            <div class="iframe-container">
                          <iframe src="https://beach.mori77z.de/archive"></iframe>
@@ -493,7 +493,7 @@
              </div>
             </div>
              <div class="discr-container">
-                 <p>An archive like THE BEACH is so important to me because it captures how style and ideas evolve over time. It’s a space to reflect on creative growth, highlight key moments, and updates dynamically throught Api.
+                 <p>An archive like THE BEACH is so important to me because it captures how style and ideas evolve over time. It’s a space to reflect on creative growth, highlight key moments, and updates automatically.
                  </p>
              </div>
          </div>
