--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
  
         <div class="main-container">
 
-<!--<h4 id="text-content">
+<h4 id="text-content">
      <span class="bold-h5">Remember When Web Was Swag?</span>I create authentic webpages that truly represent you. 
     I have worked with artists from various creative fields and businesses from all over Europe. 
     With my experience in coding and web development there's nothing we can't make happen on your page or application. I also know webflow, framer, wix, wordpress,...
     <br>Ready to rethink your online presence? Let’s make it <span class="bold-h3">bold</span>!
-</h4>-->
+</h4>
 
              <div class="combined-container" id="foodart">
              <div class="content">
@@ -62,7 +62,7 @@
                  </div>
              </div>
              <div class="discr-container">
-                 <p>Created with Blender and developed in Three.js. Immersive rendered 3D scenes add incredible value to artistic projects by crafting engaging experiences that draw the viewer in. They provide unique perspectives, transform abstract ideas into dynamic visuals, and open up interactive spaces. More coming very soon.
+                 <p>Created with Blender and developed in Three.js. More like dis coming very soon.
                  </p>
              </div>
          </div>
@@ -142,7 +142,7 @@
                  </div>
              </div>
              <div class="discr-container">
-                 <p>Simple Website styling with CSS, Javascript Algorithm creating numerous variations. Creating endless Typographic Logos for me ;).
+                 <p>Simple Website styling with CSS, Javascript Algorithm creating numerous variations. Creating endless Typographic Logos for letzers.
                  </p>
              </div>
          </div>
@@ -153,7 +153,7 @@
                  <div class="scroll-box">
                      <div class="info">
                          <h2>Autumn Pattern Generator (2024)</h2>
-                         <a href="https:///beach.mori77z.de/autumnscarfgenerator">In neuem Tab ausprobieren</a>
+                         <a href="https:///beach.mori77z.de/autumnscarfgenerator">beach.mori77z.de/autumnscarfgenerator</a>
                      </div>
                      <div class="iframe-container">
                          <iframe src="https:///beach.mori77z.de/autumnscarfgenerator"></iframe>
