--- a/index.html
+++ b/index.html
@@ -33,6 +33,108 @@
         </div>
  
         <div class="main-container">
+            
+
+             <div class="combined-container" id="foodart">
+             <div class="content">
+                 <div class="scroll-box">
+                     <div class="info">
+                         <h2>Reconnecting With Nature (2025)</h2>
+                         <p>Series of objects and Web visualization of scanned nature</p>
+                        <a href="https://beach.mori77z.de/stein.com" target="_blank">beach.mori77z.de/stein.com</a>
+                     </div>
+                     <div class="iframe-container">
+                         <iframe src="https://beach.mori77z.de/stein.com"></iframe>
+                        </div>
+                     </div>
+                                          <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2202.jpeg/" alt="Pattern 5">
+                     </div>
+                 </div>
+                                                          <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2173.jpeg/" alt="Pattern 5">
+                     </div>
+                 </div>
+                        <div class="scroll-box">
+                     <div class="info">
+                     </div>
+                        <div class="img-container">
+                              <video autoplay muted loop playsinline>
+                                <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/6140c68760694bf48b20ab6bd8cf5e94.MOV/" type="video/quicktime">
+                              </video>
+                            </div>
+                     </div>
+                                            <div class="scroll-box">
+                     <div class="info">
+                     </div>
+                        <div class="img-container">
+                              <video autoplay muted loop playsinline>
+                                <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/lightningaddon.mov" type="video/quicktime">
+                              </video>
+                            </div>
+                     </div>
+                 <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2177.jpeg/" alt="Pattern 5">
+                     </div>
+                 </div>
+                <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2162.jpeg/" alt="Pattern 5">
+                     </div>
+                 </div>
+                    <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2156.jpeg/" alt="Pattern 5">
+                     </div>
+                 </div>
+                <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2148.jpeg/" alt="Pattern 5">
+                     </div>
+                 </div>
+                                                                          <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2135.jpeg/" alt="Pattern 5">
+                     </div>
+                 </div>
+                <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2172.jpeg/" alt="Pattern 5">
+                     </div>
+                 </div>
+                <div class="scroll-box">
+                     <div class="info">
+                     </div>
+                        <div class="img-container">
+                              <video autoplay muted loop playsinline>
+                                <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2193.mov" type="video/quicktime">
+                              </video>
+                            </div>
+                     </div>
+             </div>
+     
+             <div class="arrows-wrapper">
+                 <div class="arrows">
+                     <span class="arrow arrow_left">←</span>
+                     <span class="arrow arrow_right">→</span>
+                 </div>
+             </div>
+             <div class="discr-container">
+                 <p>Objects are not functional and only barely changed from their natural shape. Stone scanned on mobile phone and imported into the web via three.js. 
+                 </p>
+             </div>
+         </div>
 
              <div class="combined-container" id="foodart">
              <div class="content">
