index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                                           <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2202.jpeg/" alt="Pattern 5">
+                         <img src="https://beach.mori77z.de/library/IMG_2202.jpeg" alt="Pattern 5">
                      </div>
                  </div>
-                                                          <div class="scroll-box">
+                    <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2173.jpeg/" alt="Pattern 5">
+                         <img src="https://beach.mori77z.de/library/IMG_2173.jpeg" alt="Pattern 5">
                      </div>
                  </div>
                         <div class="scroll-box">
@@ -64,7 +64,7 @@
                      </div>
                         <div class="img-container">
                               <video autoplay muted loop playsinline>
-                                <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/6140c68760694bf48b20ab6bd8cf5e94.MOV/" type="video/quicktime">
+                                <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/6140c68760694bf48b20ab6bd8cf5e94.MOV" type="video/quicktime">
                               </video>
                             </div>
                      </div>
@@ -73,44 +73,45 @@
                      </div>
                         <div class="img-container">
                               <video autoplay muted loop playsinline>
-                                <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/lightningaddon.mov" type="video/quicktime">
+                                <source src="https://beach.mori77z.de/library/lightningaddon.mov" type="video/quicktime">
                               </video>
                             </div>
                      </div>
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2177.jpeg/" alt="Pattern 5">
+                         <img src="https://beach.mori77z.de/library/IMG_2177.jpeg" alt="Pattern 5">
                      </div>
                  </div>
                 <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2162.jpeg/" alt="Pattern 5">
+                         <img src="https://beach.mori77z.de/library/IMG_2162.jpeg" alt="Pattern 5">
                      </div>
                  </div>
                     <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2156.jpeg/" alt="Pattern 5">
+                         <img src="https://beach.mori77z.de/library/IMG_2156.jpeg" alt="Pattern 5">
                      </div>
                  </div>
                 <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2148.jpeg/" alt="Pattern 5">
+                         <img src="https://beach.mori77z.de/library/IMG_2148.jpeg" alt="Pattern 5">
                      </div>
                  </div>
-                                                                          <div class="scroll-box">
+                    
+                <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2135.jpeg/" alt="Pattern 5">
+                         <img src="https://beach.mori77z.de/library/IMG_2135.jpeg" alt="Pattern 5">
                      </div>
                  </div>
                 <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2172.jpeg/" alt="Pattern 5">
+                         <img src="https://beach.mori77z.de/library/IMG_2172.jpeg" alt="Pattern 5">
                      </div>
                  </div>
                 <div class="scroll-box">
