index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <img src="https://beach.mori77z.de/library/IMG_2202.jpeg" alt="Pattern 5">
+        <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2202.jpeg" alt="Pattern 5">
       </div>
     </div>
 
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <img src="https://beach.mori77z.de/library/IMG_2173.jpeg" alt="Pattern 5">
+        <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2173.jpeg" alt="Pattern 5">
       </div>
     </div>
 
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video controls>
+        <video autoplay controls playsinline>
           <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/6140c68760694bf48b20ab6bd8cf5e94.MOV" type="video/quicktime">
         </video>
       </div>
@@ -74,7 +74,7 @@
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video controls>
+        <video autoplay controls playsinline>
           <source src="https://beach.mori77z.de/library/lightningaddon.mov" type="video/quicktime">
         </video>
       </div>
@@ -83,49 +83,49 @@
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <img src="https://beach.mori77z.de/library/IMG_2177.jpeg" alt="Pattern 5">
+        <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2177.jpeg" alt="Pattern 5">
       </div>
     </div>
 
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <img src="https://beach.mori77z.de/library/IMG_2162.jpeg" alt="Pattern 5">
+        <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2162.jpeg" alt="Pattern 5">
       </div>
     </div>
 
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <img src="https://beach.mori77z.de/library/IMG_2156.jpeg" alt="Pattern 5">
+        <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2156.jpeg" alt="Pattern 5">
       </div>
     </div>
 
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <img src="https://beach.mori77z.de/library/IMG_2148.jpeg" alt="Pattern 5">
+        <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2148.jpeg" alt="Pattern 5">
       </div>
     </div>
 
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <img src="https://beach.mori77z.de/library/IMG_2135.jpeg" alt="Pattern 5">
+        <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2135.jpeg" alt="Pattern 5">
       </div>
     </div>
 
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <img src="https://beach.mori77z.de/library/IMG_2172.jpeg" alt="Pattern 5">
+        <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2172.jpeg" alt="Pattern 5">
       </div>
     </div>
 
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video controls>
+        <video autoplay controls playsinline>
           <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2193.mov" type="video/quicktime">
         </video>
       </div>
@@ -140,9 +140,7 @@
   </div>
 
   <div class="discr-container">
-    <p>
-      Objects are not functional and only barely changed from their natural shape. Stone scanned on mobile phone and imported into the web via three.js. 
-    </p>
+    <p>Objects are not functional and only barely changed from their natural shape. Stone scanned on mobile phone and imported into the web via three.js.</p>
   </div>
 </div>
 
