index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -43,13 +43,6 @@
         <p>Series of objects and Web visualization of scanned nature</p>
         <a href="https://beach.mori77z.de/stein.com" target="_blank">beach.mori77z.de/stein.com</a>
       </div>
-      <div class="iframe-container">
-        <iframe src="https://beach.mori77z.de/stein.com"></iframe>
-      </div>
-    </div>
-
-    <div class="scroll-box">
-      <div class="info"></div>
       <div class="img-container">
         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2202.jpeg" alt="Pattern 5">
       </div>
@@ -65,7 +58,7 @@
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video autoplay controls playsinline>
+        <video controls playsinline>
           <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/6140c68760694bf48b20ab6bd8cf5e94.MOV" type="video/quicktime">
         </video>
       </div>
@@ -74,8 +67,8 @@
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video autoplay controls playsinline>
-          <source src="https://beach.mori77z.de/library/lightningaddon.mov" type="video/quicktime">
+        <video controls playsinline>
+          <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/lightningaddon.mov" type="video/quicktime">
         </video>
       </div>
     </div>
@@ -125,9 +118,15 @@
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video autoplay controls playsinline>
+        <video controls playsinline>
           <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2193.mov" type="video/quicktime">
         </video>
+      </div>
+    </div>
+        <div class="scroll-box">
+      <div class="info"></div>
+          <div class="iframe-container">
+        <iframe src="https://beach.mori77z.de/stein.com"></iframe>
       </div>
     </div>
   </div>
